@@ -92,6 +92,14 @@ either dropping the item in the same room as the BookLoaning, or (in the case \
 of an area), throwing the item up into the air.  The parameters have meanings \
 identical to those listed in the Archon's Guide
 
+CARNIVOROUS=\
+Property   : Carnivorous\n\r\
+Targets    : Mobs\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Mobs with this effect take no nourishment from foods that aren't meat.
+
 SLOW_LEARNER=SLOWLEARNER
 SLOWLEARNER=<ABILITY>\
 Property   : Slow Learner\n\r\
