@@ -38,6 +38,7 @@
  46. Refusing to create a new character no longer counts against login attempts.
  47. New spells: Greater Levitate, Greater Mend, Deflection, Harden, Improved Harden
  48. Rodsmithing, Staffmaking, Wandmaking, Fletching, Gunsmithing, Siegecraft all support X handed items
+ 49. New misc property: Carnivorous, for particular races, such as cats, orcs, and goblins
  
  # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
